--- a/html/正德演义.html
+++ b/html/正德演义.html
@@ -8,7 +8,7 @@
   <title>正德演义</title>
  </head>
  <body>
-  <span id="anchor">20250203215544-影摘</span>
+  <span id="anchor">20250209212136-影摘</span>
   <pre>
 茶来, 酒来
 
@@ -107,7 +107,58 @@
 浑家
 
 
-你过去阅人多矣, 而且用了太多麝香
+你过去, 阅人多矣, 而且用了太多麝香
+
+
+投刺
+古代礼节，通报姓名以求相见或表示祝贺。刺，指名刺或名帖，也就是现代的名片
+投刺在门
+战国时官场拜会，会先送上以竹片或木片制成的「谒」、「刺」。 「谒」即为汉朝的名片，用于较庄重的场合，需针对双方的辈分「量身订做」，通常是临行拜访前才写，而后来出现的「刺」（札），则可以一次写个十几片，广发于亲朋同僚间。 「名刺」的「刺」字有探求、刺探虚实之意，或指拜访扑空，只好将名片「插」在对方家门上，表示自己来过。
+过去向权贵投递名刺是种自我推荐的方法，诗人元稹有「自投名刺」之语，《后汉书》也记录祢衡为求进用，随身携带自荐书，却因心高气傲而从来没有拿出来过，导致上面的字已经磨损。而随着造纸术发展，名刺的材质由木、竹改为纸张，名称也逐渐改为「帖」、「门状」、「名纸」，「名帖」，至民国才出现「名片」一词。
+
+
+[刨木板] 不错, 像官家姨太太小姐的大腿了
+
+
+桃花庵歌
+唐寅
+桃花坞里桃花庵，桃花庵下桃花仙。 桃花仙人种桃树，又摘桃花换酒钱。
+酒醒只在花前坐，酒醉还来花下眠。 半醉半醒日复日，花落花开年复年。
+但愿老死花酒间，不愿鞠躬车马前。 车尘马足显者事，酒盏花枝隐士缘。
+若将显者比隐士，一在平地一在天。 若将花酒比车马，彼何碌碌我何闲。
+世人笑我太疯癫，我笑他人看不穿。不见五陵豪杰墓，无花无酒锄作田。
+
+
+郁孤台下清江水，中间多少行人泪。 西北望长安，可怜无数山
+赣江
+
+
+文学在身, 能为国所用则用, 不能为国所用, 则为己润身, 不要把文学当成谋生的惟一手段, 也不要把文学当成君政的附属品, 人无所求品自高啊
+
+
+某不才, 也浸淫诗书数十年, 一些浅显的道理还是懂得的
+
+
+中原鹿正肥
+
+
+一念之差, 霄壤之别
+
+
+“大耳朵老百姓”系四川方言，即平民百姓
+大耳朵，指听话。大耳朵百姓指百依百顺的毫不反抗的良民
+
+
+马彬, 你一生所有的功劳, 都在于杀良冒功, 动起真刀真枪来, 王某三回合不将你斩于马下, 当自刎而谢天下
+
+
+他是一头养不亲的狼
+
+
+那万贯家财本不该属于你, 只是暂时寄存在你那, 仅此而已
+
+
+心宽体胖
 </pre>
  </body>
 </html>
