html,txt,epub选中单个汉字时提示拼音

--- a/html/新女驸马.html
+++ b/html/新女驸马.html
@@ -12,6 +12,12 @@
   <pre>
 只有世界上最无知最愚蠢, 最不知天高地厚的人才会用金钱和权力来发婚姻的誓言
 哼, 冒充风雅, 等冯小姐做了我的老婆, 她就会知道权力和金钱, 才是婚姻的补品, 大补
+
+
+孟子云, 食色性也, 美色当前, 怜香惜玉而不动心, 那是圣人, 怜香惜玉而怦然心跳, 那是普通人, 不怜香惜玉又铁石心肠, 那不是人是畜生, 老道做不了圣人, 又不愿做畜生, 只好做普通人啦
+
+
+第6集, 一剑飘红给天香盖被子
 </pre>
  </body>
 </html>
