本地导入导出favList

--- a/html/安卓多用户.html
+++ b/html/安卓多用户.html
@@ -8,12 +8,23 @@
   <title>安卓多用户</title>
 </head>
 
-<body><span id="anchor">20240307183503-_工具使用</span>
+<body><span id="anchor">20250216153941-_工具使用</span>
   <pre>
 <h1>行为特点</h1>
 1，当一个用户处于激活状态时,其它用户虽保持后台但无法发出通知,本体闹钟除外
 2，电话短信可以留痕相当于公共应用
 3，多用户下相同的应用仅安装一次，任何用户将其更新为高版本之后，其余用户使用的也即更新后的版本，不接受低版本覆盖
+
+<h1>对比工作资料</h1>
+同一账户下切换“工作模式”即可访问或隐藏工作应用, 关闭后不会收到工作通知
+    应用可以共享双开, 而数据是分开的
+
+可一定程度用作沙盒
+    系统级攻击仍可能影响整个设备（如内核漏洞、Rootkit）。
+    恶意软件可能通过设备权限或漏洞攻击整个 Android 系统，而不仅仅是工作资料
+    真正的沙盒（如 Android 的 Work Profile 之外的 App Sandbox）是进程级隔离，而工作资料仍共享同一个 Android 内核。
+    无法限制应用的系统 API 调用，某些恶意软件仍可能绕过隔离机制。
+    可以使用“受限用户”（Limited User）或“访客模式”来更好地隔离恶意应用。
 </pre>
 </body>
 
