处理google keep导出数据

--- a/html/新女驸马.html
+++ b/html/新女驸马.html
@@ -10,6 +10,9 @@
  <body>
   <span id="anchor">20250210095943-影摘</span>
   <pre>
+20250228005616.webp
+
+
 只有世界上最无知最愚蠢, 最不知天高地厚的人才会用金钱和权力来发婚姻的誓言
 哼, 冒充风雅, 等冯小姐做了我的老婆, 她就会知道权力和金钱, 才是婚姻的补品, 大补
 
@@ -21,6 +24,40 @@
 
 
 人为什么没有两颗心, 一颗心里放着一个人, 一颗心里放着另一个人
+
+
+杏儿, 桃儿
+
+
+希望有一天, 将这些全部抛开, 你我去一乡间小隅, 三间草房, 四壁泥土, 早上是清水稀饭, 晚上是稀饭清水, 只要在院落里遍种菊花, 满庭芬芳
+
+
+惜花吟
+枝上花，花下人 可怜颜色俱青春 昨日看花花灼灼 今朝看花花欲落 不如尽此花下欢 莫待春风总吹却 莺歌蝶舞韶光长 红炉煮茗松花香 妆成罢吟恣游後 独把芳枝归洞房
+
+
+错认水是曾经闻名天下的金华名酒之一。“金华酒”是古代金华郡、州、府及辖县生产的各种黄酒的总称，历代名酒有：寿生酒、错认水、瀔溪春、东阳酒、白字酒等
+
+
+风来疏竹, 风过而竹不留声, 雁渡寒潭, 雁去而潭不留影, 故君子事来而心始观, 事去而心随空是也
+碧树森森风浩浩, 白云漠漠水潺潺
+度水红蜻蜓, 傍人飞款款, 但知随船轻, 不知船去远
+
+
+内无大患, 外无大战, 国家安宁富强, 朝中为官数年乃至十数年者, 不在少数, 出将入相, 为官为臣, 不管权势大小, 皆有敛财聚富之心, 只不过是大小程度不等, 各人机会不同
+
+
+你怕不怕死
+我怎么会不怕, 谁也不会不怕死亡, 除非是死得太突然, 来不及害怕, 像我现在这个样子, 站在死亡的悬崖边上, 如果说不害怕, 那绝不是真的, 只是我现在的仇恨要远远大于我对死亡的恐惧
+害怕和仇恨无法免除死亡
+这算是死亡通知吗, 你痛快地告诉我, 怎么个死法
+作为皇亲国戚, 你可以选择自己的死亡方式
+我惟一的要求, 是你们对这句话的承诺
+
+
+北宋苏轼的《洗儿诗》
+人皆养子望聪明，我被聪明误一生。
+惟愿孩儿愚且鲁，无灾无难到公卿。
 </pre>
  </body>
 </html>
