--- a/html/观阅队列.html
+++ b/html/观阅队列.html
@@ -7,7 +7,7 @@
   <script src="../js/content.js"></script>
   <title>观阅队列</title>
 </head>
-<body><span id="anchor">20250203170453-碎片</span>
+<body><span id="anchor">20250220213853-碎片</span>
 <pre>
 海绵宝宝11季14起
 https://www.iyf.tv/play/hkLCWaqRcM1?id=LZlEXk0zGUN
@@ -99,6 +99,7 @@ WALL-E
 虹猫蓝兔七侠传
 冰河时代2.3.4
 刺猬索尼克
+七龙珠
 </pre>
 </body>
 </html>
