--- a/html/谷歌地球的使用.html
+++ b/html/谷歌地球的使用.html
@@ -8,7 +8,7 @@
   <title>谷歌地球的使用</title>
 </head>
 
-<body><span id="anchor">20240307183503-_工具使用</span>
+<body><span id="anchor">20250223201408-_工具使用</span>
     <pre>
 网页版相比软件版渐变流畅一些,可以直接同步到drive,但不支持历史图像
 
@@ -137,20 +137,20 @@ shift+↑/↓
   <line style="fill: none; fill-opacity:0; stroke-width: 0.3; stroke: dimgray" x1="37" y1="17.6708" x2="37" y2="19.3292"></line>
   <polyline style="fill: none; fill-opacity:0; stroke-width: 0.3; stroke: dimgray" points="37.35,18.0354 37,17.3354 36.65,18.0354 "></polyline>
   <polyline style="fill: none; fill-opacity:0; stroke-width: 0.3; stroke: dimgray" points="36.65,18.9646 37,19.6646 37.35,18.9646 "></polyline>
-  <rect style="fill: dimgray" x="17" y="2" width="1" height="1"></rect>
+  <rect style="fill: red" x="17" y="2" width="1" height="1"></rect>
   <rect style="fill: none; fill-opacity:0; stroke-width: 0.2; stroke: dimgray" x="17" y="2" width="1" height="1"></rect>
   <rect style="fill: none; fill-opacity:0; stroke-width: 0.2; stroke: dimgray" x="19" y="2" width="1" height="1"></rect>
   <rect style="fill: none; fill-opacity:0; stroke-width: 0.2; stroke: dimgray" x="18" y="2" width="1" height="1"></rect>
   <rect style="fill: none; fill-opacity:0; stroke-width: 0.2; stroke: dimgray" x="17" y="3" width="3" height="2"></rect>
-  <rect style="fill: dimgray" x="39" y="2" width="1" height="1"></rect>
+  <rect style="fill: red" x="39" y="2" width="1" height="1"></rect>
   <rect style="fill: none; fill-opacity:0; stroke-width: 0.2; stroke: dimgray" x="39" y="2" width="1" height="1"></rect>
   <rect style="fill: none; fill-opacity:0; stroke-width: 0.2; stroke: dimgray" x="37" y="2" width="1" height="1"></rect>
   <rect style="fill: none; fill-opacity:0; stroke-width: 0.2; stroke: dimgray" x="38" y="2" width="1" height="1"></rect>
   <rect style="fill: none; fill-opacity:0; stroke-width: 0.2; stroke: dimgray" x="37" y="3" width="3" height="2"></rect>
   <rect style="fill: none" x="28" y="2" width="1" height="1"></rect>
   <rect style="fill: none; fill-opacity:0; stroke-width: 0.2; stroke: dimgray" x="28" y="2" width="1" height="1"></rect>
-  <rect style="fill: dimgray; fill-opacity:1; stroke-width: 0.2; stroke: dimgray" x="27" y="2" width="1" height="1"></rect>
-  <rect style="fill: dimgray; fill-opacity:1; stroke-width: 0.2; stroke: dimgray" x="29" y="2" width="1" height="1"></rect>
+  <rect style="fill: red; fill-opacity:1; stroke-width: 0.2; stroke: dimgray" x="27" y="2" width="1" height="1"></rect>
+  <rect style="fill: red; fill-opacity:1; stroke-width: 0.2; stroke: dimgray" x="29" y="2" width="1" height="1"></rect>
   <rect style="fill: none; fill-opacity:0; stroke-width: 0.2; stroke: dimgray" x="27" y="3" width="3" height="2"></rect>
   <ellipse style="fill: #333" cx="6" cy="8" rx="1" ry="1"></ellipse>
   <ellipse style="fill: none; fill-opacity:0; stroke-width: 0.2; stroke: dimgray" cx="6" cy="8" rx="1" ry="1"></ellipse>
@@ -175,20 +175,17 @@ shift+↑/↓
   <text style="fill: white; text-anchor:middle; font-size: 3; font-family: serif; font-style: normal; font-weight: normal" x="6" y="4.5">numlk</text>
   <text style="fill: white; text-anchor:middle; font-size: 3; font-family: serif; font-style: normal; font-weight: normal" x="36" y="38">enter</text>
 </svg>
-alt+ahift+numlk
-    启用鼠标键
-/
-    切换为左键
--
-    切换为右键
-*
-    同时左右键
-0
-    保持按下状态(点按一次,不必长按)
-.
-    保持释放状态(点按一次,不必长按)
-ctrl/shift+方向
-    加减速
+<p>
+Left Alt + Left Shift + Num Lock:启用鼠标键
+控制面板\轻松使用\轻松使用设置中心\设置鼠标键:调整速度
+/:切换为左键
+-:切换为右键
+*:同时选择左右两个按键
+5:单击
++:双击
+0:保持按下状态(点按一次,不必长按)
+.:保持释放状态(点按一次,不必长按)
+</p>
 </pre>
 </body>
 
