--- a/src/info.html
+++ b/src/info.html
@@ -19,7 +19,7 @@ body {
     background-size: contain;
 }
 body::before {
-    color: #00423a;
+    color: dimgray;
     content: "五代．王仁裕《开元天宝遗事》卷上《记事珠》：“开元中，张说为宰相。有人惠说一珠，绀色有光，名曰“记事珠’。或有阙忘之事，则以手持弄此珠，便觉心神开悟，事无巨细，涣然明晓，一无所忘。”";
 }
 .tooltip {
