--- a/html/方位.html
+++ b/html/方位.html
@@ -1,35 +1,115 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=1920, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/content.css"></style>
+  <link rel="stylesheet" href="../css/content.css">
   <script src="../js/content.js"></script>
   <title>方位</title>
-</head>
-
-<body><span id="anchor">20240307183503-生存</span>
+ </head>
+ <body>
+  <span id="anchor">20250305232053-户外</span>
   <pre>
-在太阳足以成影的时候，在平地上竖一根直棍（1米以上），在木棍影子的顶端放一块石头（或作其他标记），木棍的影子会随着太阳的移动而移动。30--60分钟后，再次在木棍的影子顶端放另一块石头。然后在两个石头之间划一条直线，在这条线的中间划一条与之垂直相交的直线。然后左脚踩在第一标记点上，右脚踩在第二标记点上。这时站立者的正面即是正北方，背面为正南方，右手是东方，左手为西面。
+不论是在林木遮蔽的山林中, 还是在丛草盖地的山坡上, 低头近看, 根本找不出路迹采, 只有远看, 看到几十米以外, 才能隐约地看出一条草枝微斜、草叶微倾、叶背微翻的痕迹
 
-可以用一根标杆（直杆），使其与地面垂直，把一块石子放在标杆影子的顶点A处；约10分钟后，当标杆影子的顶点移动到B处时，再放一块石子。将A、B两点连成一条直线，这条直线的指向就是东西方向。与AB连线垂直的方向则是南北方向，向太阳的一端是南方。 
+垂直立一根标杆,影子顶点放石子A, 10分钟后影子顶点放石子B, 与AB垂直向太阳的一端即南 
 
-在野外迷失方向时，切勿惊慌失措，而是要立即停下来，总冷静地回忆一下所走过的道路，想办法按一切可能利用的标志重新制定方向，然后再寻找道路。最可靠的方法是“迷途知返”，退回于原出发地。 
+在野外迷失方向时, 立即停下来冷静回忆所走过的道路, 重新制定方向, 然后再寻找道路。最可靠的方法是“迷途知返”, 退回于原出发地。 
+在山地迷失方向后, 应先登高远望, 判断应该向什么方向走。通常应朝地势低的方向走, 这样容易碰到水源、顺河而行最为保险, 这一点在森林中尤中为重要。因为道路、居民点常常是滨水临河而筑的。 
+如果遇到岔路口, 道路多而令人无所适从时, 首先要明确要去的方向, 然后选择正确的道路。若几条道路的方向大致相同, 无法判定, 则应先走中间那条路, 这样可以左右逢源, 即便走错了路, 也不会偏差太远。 
 
-在山地迷失方向后，应先登高远望，判断应该向什么方向走。通常应朝地势低的方向走，这样容易碰到水源、顺河而行最为保险，这一点在森林中尤中为重要。因为道路、居民点常常是滨水临河而筑的。 
+山地行进时力求有道路不穿林翻山, 有大路不走小路, 如没有道路, 可选择在纵向的山梁、山脊、山腰、河流小溪边缘, 以及树高林稀、空隙大、草丛低疏的地形上行进, 走梁不走沟, 走纵不走横。
+攀登岩石时应慎重地识别岩石的质量和风化程度, 确定攀登的方向和路线。 
+遇到河流时不要草率入水, 要仔细地观察之后再确定渡河的地点和方法。
+    山区河流通常水流湍急, 水温低, 河床坎坷不平。
+    涉渡时, 为了保持身体平衡, 应当用一根午子支撑在水的上游方向, 或者手执重达15~20公斤石头。
+    集体涉渡时, 可三人或四人一排, 彼此环抱肩部, 身体最强壮的位于上游方向。
 
-如果遇到岔路口，道路多而令人无所适从时，首先要明确要去的方向，然后选择正确的道路。若几条道路的方向大致相同，无法判定，则应先走中间那条路，这样可以左右逢源，即便走错了路，也不会偏差太远。 
+<h1>GPS</h1>
+<h2>经纬度直投</h2>
+经纬度等间隔直投的特点是相同的经纬度间隔在屏幕上的间距相等, 没有复杂的坐标变换。但是只是在低纬度地区长度、角度、面积、形状变化比较小, 越向高纬度, 水平距离变长越大, 很小的纬圈都变得和赤道一样长。同时要素自身会变形, 长方形会变成上宽下窄的倒梯形
 
-在山地行进，为避免迷失方向，节省体力，提高行进速度，应力求有道路不穿林翻山，有大路不走小路，如没有道路，可选择在纵向的山梁、山脊、山腰、河流小溪边缘，以及树高林稀、空隙大、草丛低疏的地  形上行进。要力求走梁不走沟，走纵不走横。
+<h2>墨卡托投影</h2>
+墨卡托(Mercator)投影, 又名“等角正轴圆柱投影”, 荷兰地图学家墨卡托（Mercator）在1569年拟定, 假设地球被围在一个中空的圆柱里, 其赤道与圆柱相接触, 然后再假想地球中心有一盏灯, 把球面上的图形投影到圆柱体上, 再把圆柱体展开, 这就是一幅标准纬线为零度（即赤道）的“墨卡托投影”绘制出的世界地图
+墨卡托投影的“等角”特性, 保证了对象的形状的不变行, 正方形的物体投影后不会变为长方形。“等角”也保证了方向和相互位置的正确性, 因此在航海和航空中常常应用, 而在Google等地图上计算人们查询地物的方向时不会出错。
+墨卡托投影的“圆柱”特性, 保证了南北（纬线）和东西（经线）都是平行直线, 并且相互垂直。而且经线间隔是相同的, 纬线间隔从标准纬线（此处是赤道, 也可能是其他纬线）向两级逐渐增大。
+但是, “等角”不可避免的带来的面积的巨大变形, 特别是两极地区, 明显的如格陵兰岛比实际面积扩大了很多倍。
+20250305235252.webp
 
-行进时，能大步走就不小走。这样几十公里下来，可以少万许多步。疲劳时，应用放松的慢步来休息，而不停下来。 攀登岩石时，应对岩石进行细致的观察，慎重地识别岩石的质量和风化程度，确定攀登的方向和路线。 
+<h2>WGS-84</h2>
+World Geodetic System世界大地测量系统, 通过遍布世界的卫星观测站观测到的坐标建立, 其精度为1—2m
+坐标原点位于地球的质心, Z轴指向BIH1984.0定义的协议地球极方向, X轴指向BIH1984.0的启始子午面和赤道的交点, Y轴与X轴和Z轴构成右手系
+WGS的最新版本为WGS 84（也称作WGS 1984、EPSG:4326）, 1984年定义、最后修订于2004年
 
-河流是山区和平原地区经常遇到障碍。遇到河流不要草率入水，要仔细地观察之后再确定渡河的地点和方法。山区河流通常水流湍急，水温低，河床坎坷不平。涉渡时，为了保持身体平衡，应当用一根午子支撑在水的上游方向，或者手执重达15~20公斤石头。集体涉渡时，可三人或四人一排，彼此环抱肩部，身体最强壮的位于上游方向。
+<h2>中国大陆坐标系</h2>
+<p>
+WGS-84:全球 GPS:标准坐标系	Google Earth、GPS 设备等
+GCJ-02:中国国家测绘局加密坐标（火星坐标）:高德地图、腾讯地图、Google Maps（中国地区）
+BD-09:百度地图专用坐标, 在 GCJ-02 基础上再次加密:百度地图、百度 API
+</p>
 
-不论是在林木遮蔽的山林中，还是在丛草盖地的山坡上，低头近看，根本找不出路迹采，只有远看，看到几十米以外，才能隐约地看出一条草枝微斜、草叶微倾、叶背微翻的痕迹
+<h2>偏移保护</h2>
+精确的坐标系统, 对于军事和国家安全具有重要价值。通过将地图坐标进行加密和偏移, 可以防止对地图数据进行不当分析, 不同坐标系之间存在着平移和旋转关系
+坐标偏移使得所有在中国境内使用的地图坐标系统（如 百度地图、高德地图 等）都采用了本地坐标系（如 GCJ-02 坐标系、BD-09 坐标系）。这使得外国地图服务商（如 Google Maps）在中国提供地图服务时需要 遵守中国的坐标标准, 而无法直接使用 WGS-84 坐标系 或其他国际标准坐标, 只有政府授权的地图服务商（如高德、百度、腾讯）能够正确处理 GCJ-02 偏移, 但它们不会直接提供 WGS-84 真实坐标。如果私人建立的是一个小规模的地图服务, 没有涉及公开发布或商业使用, 则不受坐标偏移的法律辖管
 
-涉渡时，为了保持身体平衡，应当用一根午子支撑在水的上游方向，或者手执重达15~20公斤石头。
+WGS-84 → GCJ-02（火星坐标系）
+    由政府算法加密, 使 GPS 设备采集的 WGS-84 坐标 在地图上显示时会出现偏移, 大致偏移量：
+        经度偏移 约 50~500 米（东偏）。
+        纬度偏移 约 20~300 米（北偏）。
+    这个偏移是非线性的, 也就是说, 不同地点的偏移量不一样, 不能简单用一个固定值修正。
+
+GCJ-02 → BD-09（百度坐标系）
+    百度地图 进一步加密 GCJ-02 数据, 形成 BD-09 坐标系。
+    采用了 高斯模糊和随机噪声扰动, 让普通方法难以逆向破解偏移规则。
+
+BD-09 → WGS-84（逆偏移）
+    由于 GCJ-02 和 BD-09 坐标都是通过非线性加密变换得到的, 所以无法简单用数学公式逆推回 WGS-84。
+    需要使用 API 逆转换 或者 基于大数据拟合模型 才能获得较为准确的 GPS 坐标。
+
+以下地图可能不会应用偏移： 
+    Google Earth（离线版）
+    OpenStreetMap（OSM, 开源地图）
+    部分军事、科研级别的专用地图
+    未受中国法律约束的私人地图（如海外制作的自建地图）
+    而 Google Maps（在线版） 在中国大陆地区同样使用 GCJ-02, 所以 GPS 坐标仍然会偏移。
+    
+<h2>小数度</h2>
+度+分/60+秒/3600
+
+<h1>garmin etrex solar的使用</h1>
+<h2>太阳能</h2>
+只要设备检测到阳光, 即使设备关机, 也会进行太阳能充电。
+避免设备过热, 因为过热会减慢充电速度。注意：高温下, 设备可开启自我保护以防过热, 并自动停止充电。设备连接外部电源或电量满格时, 将不会进行太阳能充电。
+
+<h2>探险模式</h2>
+收集更少的 GPS 追踪点并关闭 Bluetooth 连接, 如果两分钟不活动, 自动选项会自动开启探险模式。可以在手动菜单中使用电源选项开启探险模式。间隔选项确定记录 GPS 追踪点的频率。
+
+<h2>卫星系统</h2>
+演示模式选项将关闭 GPS
+
+<h2>投影航点</h2>
+已知一点坐标和目标方向和距离, 导航至目标
+
+<h2>重置行程数据</h2>
+将所有行程信息数值归零。为了获得准确的信息, 请在开始行程前进行重置。
+更多数据：新增更多数据字段至行程信息。
+更少数据：从行程数据表中删除数据字段。
+插入页面：插入可自定义数据字段的附加页面。
+移除页面：移除包含自定义数据字段的多余页面。
+恢复原厂设置：将行程信息恢复至出厂设置。
+
+<h2>平均位置</h2>
+进行平均时, 导航仪会在同一个位置取得多个 GPS 读数并使用平均值以提升准确度。
+当可信度状态栏达到100％时, 选择保存。为了获得最佳结果, 请为航点收集四到八个样本, 两次样本之间至少要等待90分钟。
+
+<h2>重新定位航点至当前位置</h2>
+将航点位置更改为当前位置。
+
+<h2>导航到起点</h2>
+导航返回活动的起点。在野外迷路或无路可走时, 可使用此功能来脱离困境
+
+<h2>目测导航</h2>
+将设备指向远处的目标点, 锁定方向, 然后导航到目标点
 </pre>
-</body>
-
+ </body>
 </html>
