--- a/html/火种.html
+++ b/html/火种.html
@@ -5,12 +5,15 @@
   <meta name="viewport" content="width=1920, initial-scale=1.0">
   <link rel="stylesheet" href="../css/content.css"></style>
   <script src="../js/content.js"></script>
-  <title>生火</title>
+  <title>火种</title>
 </head>
-
-<body><span id="anchor">20240307183503-生存</span>
+<body><span id="anchor">20240307183503-户外</span>
   <pre>
 点燃篝火最好的材料是桦树皮，桦树皮的含油量极高．在雨中仍可燃烧。
+
+避孕套水球聚光取火
+
+干柴要选择干燥、未腐朽的树干或枝条。要尽可能选择松树、栎树、柞树、桦树、槐树、山樱桃、山杏之类的硬木，燃烧时间长，火势大，木炭多。不要捡拾贴近地面的木柴，贴近地面的木柴湿度大，不易燃烧，烟多熏人。
 	
 生火工具如火柴，可先在蜡烛油中沾过后，放入火柴盒中，再装进密封袋内，以保持干燥。
 生火的柴薪须就地取材，如遇天雨潮湿难找到干柴时，须较费心在石缝、崖洞中寻找；或在枯树的洞穴里常有松鼠等动物窝巢中的柔软干草；此外，松树树瘤中含有松油，涂在柴薪上也能引火助燃。
@@ -25,10 +28,6 @@
 
 20221112132742.webp
 森林泥炭土；潮湿的石头
-
-干柴要选择干燥、未腐朽的树干或枝条。要尽可能选择松树、栎树、柞树、桦树、槐树、山樱桃、山杏之类的硬木，燃烧时间长，火势大，木炭多。不要捡拾贴近地面的木柴，贴近地面的木柴湿度大，不易燃烧，烟多熏人。
-
-避孕套水球聚光取火
 </pre>
 </body>
 
