--- a/src/side.html
+++ b/src/side.html
@@ -26,21 +26,16 @@
   <div id="html"> <span class="category inactive" onclick="toggle('电力_html')">电力</span>
    <ul id="电力_html" class="hidden">
     <li><a href="../html/自动重合闸.html" data-stamp="20250301223339" target="content">自动重合闸</a></li>
-   </ul><span class="category inactive" onclick="toggle('生存_html')">生存</span>
-   <ul id="生存_html" class="hidden">
-    <li><a href="../html/食谱.html" data-stamp="20250301184622" target="content">食谱</a></li>
-    <li><a href="../html/防蛇.html" data-stamp="20240510103255" target="content">防蛇</a></li>
+   </ul><span class="category inactive" onclick="toggle('户外_html')">户外</span>
+   <ul id="户外_html" class="hidden">
+    <li><a href="../html/方位.html" data-stamp="20250305232053" target="content">方位</a></li>
+    <li><a href="../html/食物.html" data-stamp="20250301184622" target="content">食物</a></li>
+    <li><a href="../html/动物伤害.html" data-stamp="20240510103255" target="content">动物伤害</a></li>
     <li><a href="../html/体况.html" data-stamp="20240307183503" target="content">体况</a></li>
-    <li><a href="../html/冷暖.html" data-stamp="20240307183503" target="content">冷暖</a></li>
-    <li><a href="../html/取水.html" data-stamp="20240307183503" target="content">取水</a></li>
-    <li><a href="../html/工具.html" data-stamp="20240307183503" target="content">工具</a></li>
-    <li><a href="../html/庇护所.html" data-stamp="20240307183503" target="content">庇护所</a></li>
-    <li><a href="../html/方位.html" data-stamp="20240307183503" target="content">方位</a></li>
-    <li><a href="../html/生火.html" data-stamp="20240307183503" target="content">生火</a></li>
-    <li><a href="../html/鉴别植物毒性.html" data-stamp="20240307183503" target="content">鉴别植物毒性</a></li>
-    <li><a href="../html/防昆虫叮咬.html" data-stamp="20240307183503" target="content">防昆虫叮咬</a></li>
-    <li><a href="../html/食物处理.html" data-stamp="20240307183503" target="content">食物处理</a></li>
-    <li><a href="../html/食物来源.html" data-stamp="20240307183503" target="content">食物来源</a></li>
+    <li><a href="../html/准备.html" data-stamp="20240307183503" target="content">准备</a></li>
+    <li><a href="../html/水源.html" data-stamp="20240307183503" target="content">水源</a></li>
+    <li><a href="../html/火种.html" data-stamp="20240307183503" target="content">火种</a></li>
+    <li><a href="../html/营地.html" data-stamp="20240307183503" target="content">营地</a></li>
    </ul><span class="category inactive" onclick="toggle('书摘_html')">书摘</span>
    <ul id="书摘_html" class="hidden">
     <li><a href="../html/中国典故大辞典1.html" data-stamp="20250228234213" target="content">中国典故大辞典1</a></li>
@@ -197,6 +192,7 @@
     <li><a data-path="../gallery/funny/阿拔斯末代国王哈里发.webp">阿拔斯末代国王哈里发.webp</a></li>
    </ul><span class="category inactive" onclick="toggle('id_7')">tip</span>
    <ul id="id_7" class="hidden">
+    <li><a data-path="../gallery/tip/732025-下午-71806.png">732025-下午-71806.png</a></li>
     <li><a data-path="../gallery/tip/F5Ov-82bYAAKsVx.jpg">F5Ov-82bYAAKsVx.jpg</a></li>
     <li><a data-path="../gallery/tip/GFgh9NYW0AAYjFE.jpg">GFgh9NYW0AAYjFE.jpg</a></li>
     <li><a data-path="../gallery/tip/GHF67imWkAEEiXP.jpg">GHF67imWkAEEiXP.jpg</a></li>
@@ -321,6 +317,8 @@
    </ul><span class="category inactive" onclick="toggle('id_17')">科普</span>
    <ul id="id_17" class="hidden">
     <li><a data-path="../gallery/科普/707.jpg">707.jpg</a></li>
+    <li><a data-path="../gallery/科普/732025-下午-95340.png">732025-下午-95340.png</a></li>
+    <li><a data-path="../gallery/科普/732025-下午-95352.png">732025-下午-95352.png</a></li>
     <li><a data-path="../gallery/科普/cvt变速原理-通过前后两个可以改变直径的固定盘-来模拟这一齿轮比变化状态.gif">cvt变速原理-通过前后两个可以改变直径的固定盘-来模拟这一齿轮比变化状态.gif</a></li>
     <li><a data-path="../gallery/科普/GJgZkY7WoAAL6zh.jpg">GJgZkY7WoAAL6zh.jpg</a></li>
     <li><a data-path="../gallery/科普/GJH5oCDaQAEiI4O.jpg">GJH5oCDaQAEiI4O.jpg</a></li>
