--- a/html/体况.html
+++ b/html/体况.html
@@ -7,28 +7,55 @@
   <script src="../js/content.js"></script>
   <title>体况</title>
 </head>
-
-<body><span id="anchor">20240307183503-生存</span>
+<body><span id="anchor">20240307183503-户外</span>
   <pre>
-<h1>脱水</h1>
-出发前十五分钟喝一杯水，上路之后，以每二、三十分钟喝至一杯半的速率。
-不要等口渴感觉做为什么时候该喝水的凭据。
-登山脱水会导致失去方向感、头痛、以致精神不集中。
-别等口渴才喝水，口渴是开始脱水的征兆。
-登山健康的基本要求之一是大量喝水，不想也要逼自己喝。
-登山前大量喝水可增强体力和耐力，攀登二十四小时前大量喝水可增进体能。夏季攀登或是长途时要多喝运动饮料。
+行进
+    能大步走就不小走。这样几十公里下来可以少万许多步。疲劳时应用放松的慢步来休息, 而不是停下来。 
 
-<h1>热衰竭</h1>
-出现昏倒、皮肤湿冷、恶心等。出现后使其双脚抬高，头部稍放低，置于阴凉处。 
+膝盖负重倍数
+    躺下来的时候，膝盖的负重几乎是0。
+    站起来和走路的时候，膝盖的负重大约是体重的1~2倍。
+    上下坡或上下阶梯的时候，膝盖的负重大约是体重的3~5倍。
+    跑步时，膝盖的负重大约是体重的4倍。
+    打球时，膝盖的负重大约是体重的6倍。
+    蹲和跪时，膝盖的负重大约是体重的7~8倍。
 
-<h1>冷水浸透处理</h1>
-20221112142118.webp
+脱水
+    出发前十五分钟喝一杯水，上路之后，以每二、三十分钟喝至一杯半的速率。
+    不要等口渴感觉做为什么时候该喝水的凭据。
+    登山脱水会导致失去方向感、头痛、以致精神不集中。
+    别等口渴才喝水，口渴是开始脱水的征兆。
+    登山健康的基本要求之一是大量喝水，不想也要逼自己喝。
+    登山前大量喝水可增强体力和耐力，攀登二十四小时前大量喝水可增进体能。夏季攀登或是长途时要多喝运动饮料。
+    尿液黄色代表身体依然呈脱水状态
 
-<h1>假性止血</h1>
-20221112142108.webp
+保暖
+    体温一旦过低便会神智不清，失去正常的思维能力和产生幻觉（很多冻死的人的表情并不痛苦便是这个原因）
 
-<h1>模拟作战环境</h1>
-20221112141835.webp
+    贴身内衣的重要性：保暖首重排汗，因为湿衣服贴在皮肤上会使体热散失，其散失的体热是干衣服的二十倍。
+    二分之一以上的体温是由头部逸失的。多戴一顶帽子和多穿一件毛衣一样的保暖。  
+
+    将干草塞衣服保暖
+
+    带厚衣物，没有厚衣服时，多穿几件薄衣服，甚至将塑料袋塞到衣服里面也可以起到相同的作用．
+
+    如果在寒冷地带，走路很多脚照样出汗，等你停下来时，潮湿的棉袜保暖性很差，会冻伤脚。 一般来说，羊毛袜子是比较好的选择。为什么不选棉的呢？主要原因是因为棉受潮以后干的很慢。
+    户外的羊毛袜一般含80%左右的毛，还加有20%的尼龙增强伸缩性。这种混织的袜子比纯毛的袜子更结实耐用。羊毛的保暖性能出色，即使湿了以后，它仍有较好的保暖性。 
+    
+热衰竭
+    出现昏倒、皮肤湿冷、恶心等。出现后使其双脚抬高，头部稍放低，置于阴凉处。 
+
+炎热和寒冷的耐受力
+    20221112140920.webp
+
+冷水浸透处理
+    20221112142118.webp
+
+假性止血
+    20221112142108.webp
+
+模拟作战环境
+    20221112141835.webp
 </pre>
 </body>
 
