--- a/html/准备.html
+++ b/html/准备.html
@@ -7,43 +7,39 @@
   <script src="../js/content.js"></script>
   <title>准备</title>
 </head>
-<body><span id="anchor">20240307183503-户外</span>
+<body><span id="anchor">20250315202756-户外</span>
   <pre>
 对于户外装备有关的新技术，都需要花时间来学习如何最好地使用它
-了解目标区域分布的蛇的种类, 外观和习性, 附近医院电话
+提前同步好相关路线和航点, 出发点手动开始记录, 然后路线导航或航点导航, 回到出发点结束记录, 导出路径文件
+每次上山要认识几种动植物(形态特性)
+
+体验
+    盐晶制取
+    钓鱼烤鱼
+    陶器烧制
+    陷阱布置
+    木屋搭建
 
 ----------------------------------------------
-肩包
+束口背包
 手机 (超级省电模式,飞行模式)
 手持GPS (garmin etrex solar)
-手摇电筒
-哨子
-
+瓶装水 (中)
+压缩饼
 直饮器 (sawyer mini)
-中瓶装水
-鸡腿/压缩饼
-
-刀具 (m390粉末钢)
-线锯
-火种 (打火机x2)
-小瓶盐
-金属饭盒 (煮食,取水,挖掘,敲击,收纳)
-小尖锹
-
+医疗包
+小刀 (m390粉末钢)
+哨子
+火石
+头灯
 望远镜 (celestron 单筒10x24)
 防蛇绑腿
 避蚊胺 (jiadebao)
-
-绑扎绳
-羊毛袜帽
-塑料布 (防潮, 取水, 保暖)
-海绵 (清除帐内壁凝结的水气)
-帐篷
-睡袋
+护袖
 ----------------------------------------------
 
 <h1>医疗包</h1>
-碘签, 创可贴, 75酒精, 止血带(带敷料)
+碘签, 创可贴, 止血带(带敷料)
     碘伏和75酒精区别
         碘伏杀菌速度较慢，但杀菌谱广，能持续杀菌一段时间, 刺激性弱, 可用于开放性伤口
         酒精杀菌速度快，但挥发快，持续作用时间短，对部分病毒（如诺如病毒）效果较弱, 刺激性强, 不能直接用于开放性伤口
@@ -58,13 +54,6 @@
         野外饮水不洁或误食变质食物，可能导致细菌感染引起的腹泻（如大肠杆菌、沙门氏菌感染）。
         主要症状：腹痛、腹泻（稀水便）、发烧。
         只对细菌性腹泻有效，如果是病毒性胃肠炎（如诺如病毒）则无效
-小檗碱 (强效的天然抗菌剂)
-    防治水土不服、旅行者腹泻
-    抗菌消炎，处理轻度肠胃感染
-    保护肠道菌群，避免食物中毒引起腹泻
-蛇毒抽吸泵
-季德胜蛇药
-    用于早期毒蛇咬伤, 不能中和蛇毒，只是辅助控制症状, 科学治疗仍以抗蛇毒血清为主，尤其是被剧毒蛇（如眼镜蛇、五步蛇、银环蛇）咬伤时
 </pre>
 </body>
 
