--- a/src/side.html
+++ b/src/side.html
@@ -28,11 +28,11 @@
     <li><a href="../html/自动重合闸.html" data-stamp="20250301223339" target="content">自动重合闸</a></li>
    </ul><span class="category inactive" onclick="toggle('户外_html')">户外</span>
    <ul id="户外_html" class="hidden">
+    <li><a href="../html/准备.html" data-stamp="20250315202756" target="content">准备</a></li>
     <li><a href="../html/方位.html" data-stamp="20250305232053" target="content">方位</a></li>
     <li><a href="../html/食物.html" data-stamp="20250301184622" target="content">食物</a></li>
     <li><a href="../html/动物伤害.html" data-stamp="20240510103255" target="content">动物伤害</a></li>
     <li><a href="../html/体况.html" data-stamp="20240307183503" target="content">体况</a></li>
-    <li><a href="../html/准备.html" data-stamp="20240307183503" target="content">准备</a></li>
     <li><a href="../html/水源.html" data-stamp="20240307183503" target="content">水源</a></li>
     <li><a href="../html/火种.html" data-stamp="20240307183503" target="content">火种</a></li>
     <li><a href="../html/营地.html" data-stamp="20240307183503" target="content">营地</a></li>
@@ -59,7 +59,8 @@
     <li><a href="../html/The History of Tom Jones, A Foundling.html" data-stamp="20240307183503" target="content">The History of Tom Jones, A Foundling</a></li>
    </ul><span class="category inactive" onclick="toggle('碎片_html')">碎片</span>
    <ul id="碎片_html" class="hidden">
-    <li><a href="../html/观阅记录.html" data-stamp="20250209212223" target="content">观阅记录</a></li>
+    <li><a href="../html/观阅记录.html" data-stamp="20250311194756" target="content">观阅记录</a></li>
+    <li><a href="../html/碎片3.html" data-stamp="20250309161549" target="content">碎片3</a></li>
     <li><a href="../html/碎片2.html" data-stamp="20250201104649" target="content">碎片2</a></li>
     <li><a href="../html/成人笑话.html" data-stamp="20240424214437" target="content">成人笑话</a></li>
     <li><a href="../html/碎片1.html" data-stamp="20240401103934" target="content">碎片1</a></li>
@@ -68,6 +69,7 @@
     <li><a href="../html/民谚.html" data-stamp="20240307183503" target="content">民谚</a></li>
    </ul><span class="category inactive" onclick="toggle('影摘_html')">影摘</span>
    <ul id="影摘_html" class="hidden">
+    <li><a href="../html/南宋传奇之蟋蟀宰相.html" data-stamp="20250311214722" target="content">南宋传奇之蟋蟀宰相</a></li>
     <li><a href="../html/新女驸马.html" data-stamp="20250210095943" target="content">新女驸马</a></li>
     <li><a href="../html/正德演义.html" data-stamp="20250209212136" target="content">正德演义</a></li>
     <li><a href="../html/把酒问青天.html" data-stamp="20250202094530" target="content">把酒问青天</a></li>
@@ -305,7 +307,12 @@
      <li><a data-path="../gallery/拍摄/五桂山长江水库/20250302231162.webp">20250302231162.webp</a></li>
      <li><a data-path="../gallery/拍摄/五桂山长江水库/20250302231163.webp">20250302231163.webp</a></li>
      <li><a data-path="../gallery/拍摄/五桂山长江水库/20250302231164.webp">20250302231164.webp</a></li>
-     <li><a data-path="../gallery/拍摄/五桂山长江水库/20250302231165.webp">20250302231165.webp</a></li>
+     <li><a data-path="../gallery/拍摄/五桂山长江水库/20250316213019.webp">20250316213019.webp</a></li>
+     <li><a data-path="../gallery/拍摄/五桂山长江水库/20250316213020.webp">20250316213020.webp</a></li>
+     <li><a data-path="../gallery/拍摄/五桂山长江水库/20250316213021.webp">20250316213021.webp</a></li>
+     <li><a data-path="../gallery/拍摄/五桂山长江水库/20250316213022.webp">20250316213022.webp</a></li>
+     <li><a data-path="../gallery/拍摄/五桂山长江水库/20250316213023.webp">20250316213023.webp</a></li>
+     <li><a data-path="../gallery/拍摄/五桂山长江水库/20250316213024.webp">20250316213024.webp</a></li>
     </ul><span class="category inactive" onclick="toggle('id_15')">婺源理坑</span>
     <ul id="id_15" class="hidden">
      <li><a data-path="../gallery/拍摄/婺源理坑/20220903205655.webp">20220903205655.webp</a></li>
