--- a/src/side.html
+++ b/src/side.html
@@ -59,7 +59,7 @@
     <li><a href="../html/The History of Tom Jones, A Foundling.html" data-stamp="20240307183503" target="content">The History of Tom Jones, A Foundling</a></li>
    </ul><span class="category inactive" onclick="toggle('碎片_html')">碎片</span>
    <ul id="碎片_html" class="hidden">
-    <li><a href="../html/观阅记录.html" data-stamp="20250311194756" target="content">观阅记录</a></li>
+    <li><a href="../html/观阅记录.html" data-stamp="20250319201712" target="content">观阅记录</a></li>
     <li><a href="../html/碎片3.html" data-stamp="20250309161549" target="content">碎片3</a></li>
     <li><a href="../html/碎片2.html" data-stamp="20250201104649" target="content">碎片2</a></li>
     <li><a href="../html/成人笑话.html" data-stamp="20240424214437" target="content">成人笑话</a></li>
@@ -69,7 +69,7 @@
     <li><a href="../html/民谚.html" data-stamp="20240307183503" target="content">民谚</a></li>
    </ul><span class="category inactive" onclick="toggle('影摘_html')">影摘</span>
    <ul id="影摘_html" class="hidden">
-    <li><a href="../html/南宋传奇之蟋蟀宰相.html" data-stamp="20250311214722" target="content">南宋传奇之蟋蟀宰相</a></li>
+    <li><a href="../html/南宋传奇之蟋蟀宰相.html" data-stamp="20250319201757" target="content">南宋传奇之蟋蟀宰相</a></li>
     <li><a href="../html/新女驸马.html" data-stamp="20250210095943" target="content">新女驸马</a></li>
     <li><a href="../html/正德演义.html" data-stamp="20250209212136" target="content">正德演义</a></li>
     <li><a href="../html/把酒问青天.html" data-stamp="20250202094530" target="content">把酒问青天</a></li>
@@ -1719,7 +1719,9 @@
     <li><a data-path="audio/雪山飞狐/雪中情.mp3">雪中情.mp3</a></li>
    </ul><span class="category inactive" onclick="toggle('id_76')">未分类</span>
    <ul id="id_76" class="hidden">
+    <li><a data-path="audio/南宋传奇之蟋蟀宰相-女人心.mp3">南宋传奇之蟋蟀宰相-女人心.mp3</a></li>
     <li><a data-path="audio/宰相刘罗锅-插曲.mp3">宰相刘罗锅-插曲.mp3</a></li>
+    <li><a data-path="audio/新女驸马-卖相思.mp3">新女驸马-卖相思.mp3</a></li>
     <li><a data-path="audio/正德演义-片头曲.mp3">正德演义-片头曲.mp3</a></li>
    </ul>
   </div>
