--- a/html/谷歌地球的使用.html
+++ b/html/谷歌地球的使用.html
@@ -8,9 +8,9 @@
   <title>谷歌地球的使用</title>
 </head>
 
-<body><span id="anchor">20250223201408-_工具使用</span>
+<body><span id="anchor">20250320194610-_工具使用</span>
     <pre>
-网页版相比软件版渐变流畅一些,可以直接同步到drive,但不支持历史图像
+网页版相比软件版渐变流畅一些,可以直接同步到drive
 
 <h1>快捷键</h1>
 n
