--- a/html/准备.html
+++ b/html/准备.html
@@ -7,7 +7,7 @@
   <script src="../js/content.js"></script>
   <title>准备</title>
 </head>
-<body><span id="anchor">20250315202756-户外</span>
+<body><span id="anchor">20250321180937-户外</span>
   <pre>
 对于户外装备有关的新技术，都需要花时间来学习如何最好地使用它
 提前同步好相关路线和航点, 出发点手动开始记录, 然后路线导航或航点导航, 回到出发点结束记录, 导出路径文件
@@ -24,14 +24,14 @@
 束口背包
 手机 (超级省电模式,飞行模式)
 手持GPS (garmin etrex solar)
-瓶装水 (中)
+瓶装水 (1.5L, 溶入2g盐, 10g糖)
 压缩饼
 直饮器 (sawyer mini)
 医疗包
 小刀 (m390粉末钢)
 哨子
 火石
-头灯
+手电 (fenix c5)
 望远镜 (celestron 单筒10x24)
 防蛇绑腿
 避蚊胺 (jiadebao)
