--- a/html/鹿鼎记.html
+++ b/html/鹿鼎记.html
@@ -7,7 +7,7 @@
   <script src="../js/content.js"></script>
   <title>鹿鼎记</title>
 </head>
-<body><span id="anchor">20241026192036-影摘</span>
+<body><span id="anchor">20250324210237-影摘</span>
 <pre>
 少小须勤学, 文章可立身, 满朝朱紫贵, 尽是读书人
 
@@ -75,6 +75,8 @@
 香径尘生乌自啼，屧廊人去苔空绿。
 换羽移宫万里愁，珠歌翠舞古梁州。
 为君别唱吴宫曲，汉水东南日夜流！
+
+由于世人将吴三桂变节归咎于其爱妾陈圆圆被掳，令吴三桂为夺回陈氏而与满人勾结，诗人吴梅村以西施讽今，谱下七言长诗《圆圆曲》，指出陈圆圆无一丝损害国家之举，责任应在吴三桂，抨击了他“冲冠一怒为红颜”的举动
 
 斩竹莫伤笋
 
