--- a/src/side.html
+++ b/src/side.html
@@ -36,9 +36,13 @@
     <li><a href="../html/水源.html" data-stamp="20240307183503" target="content">水源</a></li>
     <li><a href="../html/火种.html" data-stamp="20240307183503" target="content">火种</a></li>
     <li><a href="../html/营地.html" data-stamp="20240307183503" target="content">营地</a></li>
+   </ul><span class="category inactive" onclick="toggle('日记_html')">日记</span>
+   <ul id="日记_html" class="hidden">
+    <li><a href="../html/2504.html" data-stamp="20250404121850" target="content">2504</a></li>
+    <li><a href="../html/2503.html" data-stamp="20250327191348" target="content">2503</a></li>
    </ul><span class="category inactive" onclick="toggle('书摘_html')">书摘</span>
    <ul id="书摘_html" class="hidden">
-    <li><a href="../html/中国典故大辞典1.html" data-stamp="20250228234213" target="content">中国典故大辞典1</a></li>
+    <li><a href="../html/中国典故大辞典1.html" data-stamp="20250323213555" target="content">中国典故大辞典1</a></li>
     <li><a href="../html/1984.html" data-stamp="20240307183503" target="content">1984</a></li>
     <li><a href="../html/中国历史故事集林汉达.html" data-stamp="20240307183503" target="content">中国历史故事集林汉达</a></li>
     <li><a href="../html/小说写作教程.html" data-stamp="20240307183503" target="content">小说写作教程</a></li>
@@ -69,6 +73,8 @@
     <li><a href="../html/民谚.html" data-stamp="20240307183503" target="content">民谚</a></li>
    </ul><span class="category inactive" onclick="toggle('影摘_html')">影摘</span>
    <ul id="影摘_html" class="hidden">
+    <li><a href="../html/海绵宝宝.html" data-stamp="20250328180204" target="content">海绵宝宝</a></li>
+    <li><a href="../html/鹿鼎记.html" data-stamp="20250324210237" target="content">鹿鼎记</a></li>
     <li><a href="../html/长河东流.html" data-stamp="20250320131009" target="content">长河东流</a></li>
     <li><a href="../html/南宋传奇之蟋蟀宰相.html" data-stamp="20250319201757" target="content">南宋传奇之蟋蟀宰相</a></li>
     <li><a href="../html/新女驸马.html" data-stamp="20250210095943" target="content">新女驸马</a></li>
@@ -84,7 +90,6 @@
     <li><a href="../html/穿越时空的爱恋.html" data-stamp="20241209122851" target="content">穿越时空的爱恋</a></li>
     <li><a href="../html/武林外史.html" data-stamp="20241105185513" target="content">武林外史</a></li>
     <li><a href="../html/铁齿铜牙纪晓兰.html" data-stamp="20241105185513" target="content">铁齿铜牙纪晓兰</a></li>
-    <li><a href="../html/鹿鼎记.html" data-stamp="20241026192036" target="content">鹿鼎记</a></li>
     <li><a href="../html/萍踪侠影.html" data-stamp="20241022205702" target="content">萍踪侠影</a></li>
     <li><a href="../html/喜气洋洋猪八戒.html" data-stamp="20241018212724" target="content">喜气洋洋猪八戒</a></li>
     <li><a href="../html/福星高照猪八戒.html" data-stamp="20241015103703" target="content">福星高照猪八戒</a></li>
@@ -108,7 +113,6 @@
     <li><a href="../html/武林外传.html" data-stamp="20240307183503" target="content">武林外传</a></li>
     <li><a href="../html/母女情深.html" data-stamp="20240307183503" target="content">母女情深</a></li>
     <li><a href="../html/汤姆·琼斯.html" data-stamp="20240307183503" target="content">汤姆·琼斯</a></li>
-    <li><a href="../html/海绵宝宝.html" data-stamp="20240307183503" target="content">海绵宝宝</a></li>
     <li><a href="../html/炎热的夜晚.html" data-stamp="20240307183503" target="content">炎热的夜晚</a></li>
     <li><a href="../html/煤气灯下.html" data-stamp="20240307183503" target="content">煤气灯下</a></li>
     <li><a href="../html/环游世界八十天.html" data-stamp="20240307183503" target="content">环游世界八十天</a></li>
@@ -135,6 +139,7 @@
     <li><a data-path="../book/人文地理/【视频】法国飞行员、作家——安托万·德·圣埃克苏佩里的千面人生.pdf" target="content">【视频】法国飞行员、作家——安托万·德·圣埃克苏佩里的千面人生.pdf</a></li>
     <li><a data-path="../book/人文地理/太阳地球工程--气候解决方案还是打开了潘多拉魔盒？ ! 科技环境 ! DW ! 30.07.2023.pdf" target="content">太阳地球工程--气候解决方案还是打开了潘多拉魔盒？ ! 科技环境 ! DW ! 30.07.2023.pdf</a></li>
     <li><a data-path="../book/人文地理/明代荆襄流民的治理史.pdf" target="content">明代荆襄流民的治理史.pdf</a></li>
+    <li><a data-path="../book/人文地理/清军为何要和明朝死磕山海关？绕道不行吗_腾讯新闻.pdf" target="content">清军为何要和明朝死磕山海关？绕道不行吗_腾讯新闻.pdf</a></li>
    </ul><span class="category inactive" onclick="toggle('id_1')">历史</span>
    <ul id="id_1" class="hidden">
     <li><a data-path="../book/历史/《中国历史故事集》林汉达.html">《中国历史故事集》林汉达.txt</a></li>
@@ -229,6 +234,7 @@
     <li><a data-path="../gallery/动物/GWHMsDrWUAAIRkO.jpg">GWHMsDrWUAAIRkO.jpg</a></li>
    </ul><span class="category inactive" onclick="toggle('id_9')">地理人文</span>
    <ul id="id_9" class="hidden">
+    <li><a data-path="../gallery/地理人文/24_127451_439649a79391e69.gif">24_127451_439649a79391e69.gif</a></li>
     <li><a data-path="../gallery/地理人文/A few seconds before happiness.jpg">A few seconds before happiness.jpg</a></li>
     <li><a data-path="../gallery/地理人文/GHgCBMoWoAAX6NZ.jpg">GHgCBMoWoAAX6NZ.jpg</a></li>
     <li><a data-path="../gallery/地理人文/GI-KMmLWYAAl3Q2.jpg">GI-KMmLWYAAl3Q2.jpg</a></li>
@@ -253,6 +259,10 @@
     <li><a data-path="../gallery/地理人文/GVSqrskaoAAGjbl.jpg">GVSqrskaoAAGjbl.jpg</a></li>
     <li><a data-path="../gallery/地理人文/Lomanstraat Street decorated with symmetrical trees in Amsterdam.jpg">Lomanstraat Street decorated with symmetrical trees in Amsterdam.jpg</a></li>
     <li><a data-path="../gallery/地理人文/乡村市集通名.webp">乡村市集通名.webp</a></li>
+    <li><a data-path="../gallery/地理人文/山海关.webp">山海关.webp</a></li>
+    <li><a data-path="../gallery/地理人文/山海关2.webp">山海关2.webp</a></li>
+    <li><a data-path="../gallery/地理人文/山海关3.webp">山海关3.webp</a></li>
+    <li><a data-path="../gallery/地理人文/山海关4.webp">山海关4.webp</a></li>
     <li><a data-path="../gallery/地理人文/弗里德里希·迪伦马特，以笔为矛的批评家.webp">弗里德里希·迪伦马特，以笔为矛的批评家.webp</a></li>
     <li><a data-path="../gallery/地理人文/朝代年表.png">朝代年表.png</a></li>
    </ul><span class="category inactive" onclick="toggle('id_10')">小诗</span>
@@ -291,7 +301,6 @@
     </ul><span class="category inactive" onclick="toggle('id_14')">五桂山_250322</span>
     <ul id="id_14" class="hidden">
      <li><a data-path="../gallery/拍摄/五桂山_250322/20250323100801.webp">20250323100801.webp</a></li>
-     <li><a data-path="../gallery/拍摄/五桂山_250322/20250323100802.webp">20250323100802.webp</a></li>
      <li><a data-path="../gallery/拍摄/五桂山_250322/20250323100803.webp">20250323100803.webp</a></li>
      <li><a data-path="../gallery/拍摄/五桂山_250322/20250323100804.webp">20250323100804.webp</a></li>
      <li><a data-path="../gallery/拍摄/五桂山_250322/20250323100805.webp">20250323100805.webp</a></li>
