--- a/html/长河东流.html
+++ b/html/长河东流.html
@@ -23,6 +23,23 @@
 
 
 一动风摆柳
+
+
+做强弓齐射的出头鸟啊
+
+
+打朱由榔好有一比, 那就是, 胯子里捉鸟, 伸手就玩完哪
+
+
+阿卡人说过的话, 就像那大盈江的水, 是永不收回的
+
+
+马都人
+都人,明代称宫女
+
+
+鳌拜呀, 一句打开城门迎闯王, 闯王来了不纳粮的顺口溜, 就把西安一直到北京的城门, 全给唱开了, 逼得朱由检在煤山上上了吊, 你想想, 如果出现类似的口号和顺口溜, 比如为了头发就杀人, 不抗大清活不成, 或者圈地投充绝人命, 赶走清兵求生存, 你想想看, 会是什么样的一个结果呀
+摄政王远见哪
 </pre>
  </body>
 </html>
