--- a/html/食物.html
+++ b/html/食物.html
@@ -45,18 +45,15 @@
     苦菜、蒲公英、鱼腥草、马齿苋、刺儿草、荠菜、野苋菜、扫帚菜、菱、莲、芦苇、青苔等
     藻类、地衣、蘑菇等。
 
-20221112141622.webp
-户外烫石煎鱼
-
 室内
     早    
         麦片,叶黄素,煮蛋,核桃
     中
-        面条,黑胡椒,姜黄粉,油盐,西兰花,腐乳,生胡萝卜
+        面条,黑胡椒,姜黄粉,油盐,西兰花,生胡萝卜,芭乐
     晚
-        面条,黑胡椒,姜黄粉,油盐,西兰花,腐乳
+        面条,黑胡椒,姜黄粉,油盐,西兰花
     饮
-        菊茶,听啤
+        菊茶
 </pre>
  </body>
 </html>
