--- a/html/准备.html
+++ b/html/准备.html
@@ -7,10 +7,10 @@
   <script src="../js/content.js"></script>
   <title>准备</title>
 </head>
-<body><span id="anchor">20250321180937-户外</span>
+<body><span id="anchor">20250505105224-户外</span>
   <pre>
 对于户外装备有关的新技术，都需要花时间来学习如何最好地使用它
-提前同步好相关路线和航点, 出发点手动开始记录, 然后路线导航或航点导航, 回到出发点结束记录, 导出路径文件
+提前同步好相关路线和航点, 出发点手动开始记录, 然后路线导航或航点导航, 回到出发点结束记录
 每次上山要认识几种动植物(形态特性)
 
 体验
@@ -21,8 +21,8 @@
     木屋搭建
 
 ----------------------------------------------
-束口背包
-手机 (超级省电模式,飞行模式)
+腰包 (forclaz 7L)
+手机 (超级省电模式)
 手持GPS (garmin etrex solar)
 瓶装水 (1.5L, 溶入2g盐, 10g糖)
 压缩饼
@@ -33,9 +33,9 @@
 火石
 手电 (fenix c5)
 望远镜 (celestron 单筒10x24)
-防蛇绑腿
-避蚊胺 (jiadebao)
+避蚊胺 (jiadebao 10%deet)
 护袖
+湿巾
 ----------------------------------------------
 
 <h1>医疗包</h1>
@@ -54,6 +54,7 @@
         野外饮水不洁或误食变质食物，可能导致细菌感染引起的腹泻（如大肠杆菌、沙门氏菌感染）。
         主要症状：腹痛、腹泻（稀水便）、发烧。
         只对细菌性腹泻有效，如果是病毒性胃肠炎（如诺如病毒）则无效
+橡胶管
 </pre>
 </body>
 
