--- a/html/长河东流.html
+++ b/html/长河东流.html
@@ -8,7 +8,7 @@
   <title>长河东流</title>
  </head>
  <body>
-  <span id="anchor">20250320131009-影摘</span>
+  <span id="anchor">20250505120324-影摘</span>
   <pre>
 天上星斗转, 人间演恩仇
 
@@ -40,6 +40,19 @@
 
 鳌拜呀, 一句打开城门迎闯王, 闯王来了不纳粮的顺口溜, 就把西安一直到北京的城门, 全给唱开了, 逼得朱由检在煤山上上了吊, 你想想, 如果出现类似的口号和顺口溜, 比如为了头发就杀人, 不抗大清活不成, 或者圈地投充绝人命, 赶走清兵求生存, 你想想看, 会是什么样的一个结果呀
 摄政王远见哪
+
+
+万一狡兔杀尽, 哪里还有我们弟兄的立足之地啊
+所以要向王爷进言, 万不可永作痴人哪
+
+
+兵者大凶之事, 若不穷通变化, 断非良帅
+
+
+人各有志, 你重生张侍郎重义, 你就别枉费心机了
+
+
+如果全天下的人都像我们阿卡人, 那该有多好啊, 一同种庄稼一起打猎, 然后再把食物和猎物归大伙所有, 在太阳下劳作, 在月光下跳舞, 彼此之间只有关心和照顾, 没有计算和仇恨, 更不会为了什么这个朝那个朝, 而互相残害, 如果彼此之间只有爱, 那该有多好啊
 </pre>
  </body>
 </html>
