--- a/html/观阅记录.html
+++ b/html/观阅记录.html
@@ -129,7 +129,7 @@
   </style>
  </head>
  <body>
-  <span id="anchor">20250319201712-碎片</span>
+  <span id="anchor">20250505210310-碎片</span>
   <div class="accordion">
    <input type="radio" name="select" class="accordion-select" checked>
    <div class="accordion-title">
@@ -138,6 +138,10 @@
    <div class="accordion-content">
     <table>
       <tbody>
+        <tr>
+          <td>长河东流</td>
+          <td>2008</td>
+        </tr>
         <tr>
           <td>南宋传奇之蟋蟀宰相</td>
           <td>2003</td>
